--- a/OAuth2Client/OAuth2Client.csproj
+++ b/OAuth2Client/OAuth2Client.csproj
@@ -8,12 +8,13 @@
         <IsPackable>false</IsPackable>
         <SpaRoot>ClientApp\</SpaRoot>
         <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
-        <SpaProxyServerUrl>https://localhost:44454</SpaProxyServerUrl>
+        <SpaProxyServerUrl>https://localhost:8080</SpaProxyServerUrl>
         <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.8" />
     </ItemGroup>
 
