--- a/OAuth2Client/appsettings.Development.json
+++ b/OAuth2Client/appsettings.Development.json
@@ -6,5 +6,25 @@
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "OAuth": {
+    "Kakao": {
+      "ClientId": "<my-kakao-oauth-client-id>",
+      "ClientSecret": "<my-kakao-oauth-client-secret>",
+      "SaveTokens": false,
+      "Scopes": [
+        "profile_nickname",
+        "profile_image",
+        "account_email",
+        "birthday"
+      ]
+    }
+  },
+  "Jwt": {
+    "SecretKey": "<my-jwt-secret-key-example>",
+    "Issuer": "MyOAuthSampleService",
+    "Audience": "MyOAuthSampleServiceUser",
+    "ExpirationMinutes": 30,
+    "TokenName": "AccessToken"
   }
 }
