--- a/OAuth2Client/appsettings.Development.json
+++ b/OAuth2Client/appsettings.Development.json
@@ -9,8 +9,8 @@
   },
   "OAuth": {
     "Kakao": {
-      "ClientId": "<my-kakao-oauth-client-id>",
-      "ClientSecret": "<my-kakao-oauth-client-secret>",
+      "ClientId": "{my-kakao-oauth-client-id}",
+      "ClientSecret": "{my-kakao-oauth-client-secret}",
       "SaveTokens": false,
       "Scopes": [
         "profile_nickname",
@@ -21,7 +21,7 @@
     }
   },
   "Jwt": {
-    "SecretKey": "<my-jwt-secret-key-example>",
+    "SecretKey": "{my-jwt-secret-key-example}",
     "Issuer": "MyOAuthSampleService",
     "Audience": "MyOAuthSampleServiceUser",
     "ExpirationMinutes": 30,
