--- a/OAuth2Client/appsettings.Development.json
+++ b/OAuth2Client/appsettings.Development.json
@@ -26,5 +26,8 @@
     "Audience": "MyOAuthSampleServiceUser",
     "ExpirationMinutes": 30,
     "TokenName": "AccessToken"
+  },
+  "Aes": {
+    "Password": "<my-aes-secret-password>"
   }
 }
