--- a/OAuth2Client/appsettings.Development.json
+++ b/OAuth2Client/appsettings.Development.json
@@ -1,10 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.AspNetCore.SpaProxy": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Information"
     }
   },
   "OAuth": {
@@ -26,8 +23,5 @@
     "Audience": "MyOAuthSampleServiceUser",
     "ExpirationMinutes": 30,
     "TokenName": "AccessToken"
-  },
-  "Aes": {
-    "Password": "<my-aes-secret-password>"
   }
 }
